--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="section__text">
           <p class="section__text__p1">Hello, I'm</p>
           <h1 class="title">Sangam Khanal</h1>
-          <p class="section__text__p2">Software Developer | Network & Security Engineer</p>
+          <p class="section__text__p2"> Network & Security Engineer | Software Developer </p>
           <div class="btn-container">
             <button
               class="btn btn-color-2"
@@ -245,6 +245,51 @@
                     class="icon"
                   />
                   <div>
+                    <h3>Scripting</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>Digital Forensics</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>Penetration Testing</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>System Administration</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
                     <h3>Cloud Technolgies</h3>
                     <p>Experienced</p>
                   </div>
@@ -291,16 +336,18 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-1.png"
+                  src="./assets/Untitled design (3).png"
                   alt="Project 1"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project One</h2>
+              <h2 class="experience-sub-title project-title">Sapati.co</h2>
+              <p>
+                Currently under development, SAPATI is a cutting-edge, full-stack money lending platform that is set to redefine the financial landscape, featuring advanced risk assessment algorithms, regulatory compliance, and a seamless user experience.</p>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/sangam4ever/SAPATI'"
                 >
                   Github
                 </button>
@@ -315,16 +362,18 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-2.png"
+                  src="./assets/Untitled design (5).png"
                   alt="Project 2"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Two</h2>
+              <h2 class="experience-sub-title project-title">Bakery Order System</h2>
+              <p>
+                The Bakery Order System (BMS), developed in Python, utilizes the openpyxl library for Excel integration and datetime module for timestamping, providing a streamlined solution for managing and exporting customer orders in the bakery business.</p>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/sangam4ever/BMS'"
                 >
                   Github
                 </button>
@@ -339,16 +388,19 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-3.png"
+                  src="./assets/Untitled design (4).png"
                   alt="Project 3"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Three</h2>
-              <div class="btn-container">
+              <h2 class="experience-sub-title project-title">Portscanner built with python</h2>
+              <p>
+                This Python script is a user-friendly port scanner that systematically checks a range of ports on a specified IP address, utilizing the socket library to identify and print any open ports, making it a valuable tool for network diagnostics and security assessments.</p>
+              <br>
+                <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/sangam4ever/Port-Scanner'"
                 >
                   Github
                 </button>
@@ -379,7 +431,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:sangamkhanal5ever@gmail.com">sangamkhanal5ever@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
@@ -387,7 +439,7 @@
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/sangamkhanal4ever/">LinkedIn</a></p>
           </div>
         </div>
       </section>
@@ -403,7 +455,7 @@
             </ul>
           </div>
         </nav>
-        <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Sangam Khanal. All Rights Reserved.</p>
       </footer>
 
     <script src="script.js"></script>
