--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="text-container">
               <p>
-                As an ambitious Information Technology enthusiast, I bring a strong foundation in device configuration, networking protocols, and operating systems, coupled with a proficiency in cybersecurity frameworks. My passion extends to software development, where I excel in Python for backend scripting and Django for web application development. Additionally, I am well-versed in frontend technologies, including HTML, CSS, and JavaScript, with experience in frameworks like React. I have a keen understanding of cloud technologies, particularly AWS, and am adept in CI/CD practices. Committed to continuous learning, I eagerly embrace new challenges to maximize contributions to user, team, and business success.
+                Passionate about technology and driven by curiosity, I am transitioning from sales consulting to a career in IT, with a focus on system administration and cloud computing. Combining my customer-centric mindset with a growing technical expertise, I am ready to tackle challenges and deliver impactful solutions in dynamic IT environments. Let's connect to explore how I can contribute to your organization's success! 
               </p>
             </div>
           </div>
@@ -132,7 +132,7 @@
         <div class="experience-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <h2 class="experience-sub-title">Software Development</h2>
+              <h2 class="experience-sub-title">Technical Support</h2>
               <div class="article-container">
                 <article>
                   <img
@@ -141,7 +141,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>HTML</h3>
+                    <h3>Sharepoint, Exchange & Office 365 Administration</h3>
                     <p>Experienced</p>
                   </div>
                 </article>
@@ -152,7 +152,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>CSS</h3>
+                    <h3> Entra ID & Active Directory</h3>
                     <p>Experienced</p>
                   </div>
                 </article>
@@ -163,7 +163,7 @@
                       class="icon"
                     />
                     <div>
-                      <h3>PostgresSQL</h3>
+                      <h3>Windows Server</h3>
                       <p>Experienced</p>
                     </div>
                   </article>
@@ -174,8 +174,8 @@
                     class="icon"
                   />
                   <div>
-                    <h3>JAVASCRIPT</h3>
-                    <p>Intermediate</p>
+                    <h3>Cloud & Virtualisation</h3>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -185,8 +185,8 @@
                     class="icon"
                   />
                   <div>
-                    <h3>REACT</h3>
-                    <p>Basic</p>
+                    <h3>Intune</h3>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -196,8 +196,8 @@
                     class="icon"
                   />
                   <div>
-                    <h3>TypeScript</h3>
-                    <p>Basic</p>
+                    <h3>Google Workspace</h3>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -207,7 +207,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>PYTHON</h3>
+                    <h3>ConnestWise</h3>
                     <p>Expereinced</p>
                   </div>
                 </article>
@@ -218,7 +218,7 @@
                       class="icon"
                     />
                     <div>
-                      <h3>Django</h3>
+                      <h3>DNS/DHCP</h3>
                       <p>Expereinced</p>
                     </div>
                   </article>
@@ -257,7 +257,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Digital Forensics</h3>
+                    <h3>Backup & Disaster Recovery</h3>
                     <p>Experienced</p>
                   </div>
                 </article>
@@ -290,7 +290,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Cloud Technolgies</h3>
+                    <h3>TCP/IP</h3>
                     <p>Experienced</p>
                   </div>
                 </article>
