--- a/index.html
+++ b/index.html
@@ -220,7 +220,18 @@
                     <div>
                       <h3>DNS/DHCP</h3>
                       <p>Expereinced</p>
-                    </div>
+                    </div> 
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                      <h3> Incident/Ticket Management/Escalations</h3>
+                      <p>Expereinced</p>
+                    </div> 
                   </article>
               </div>
             </div>
