--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                       class="icon"
                     />
                     <div>
-                      <h3> Incident/Ticket Management/Escalations</h3>
+                      <h3> Incident Report/Ticketing</h3>
                       <p>Expereinced</p>
                     </div> 
                   </article>
