--- a/index.html
+++ b/index.html
@@ -290,7 +290,18 @@
                     class="icon"
                   />
                   <div>
-                    <h3>System Administration</h3>
+                    <h3>Linux / VMWARE</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>Python, </h3>
                     <p>Experienced</p>
                   </div>
                 </article>
