--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     class="icon"
                   />
                   <div>
-                    <h3>Python, </h3>
+                    <h3>IDS/IPS </h3>
                     <p>Experienced</p>
                   </div>
                 </article>
